SILGen: Support for local function default argument captures

Fixes <https://bugs.swift.org/browse/SR-2189>, <rdar://problem/20796451>.